--- a/webd/testa유형.html
+++ b/webd/testa유형.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>웹디자인기능사 레이아웃 A-1</title>
+    <title>메뉴유형</title>
     <link href="https://webfontworld.github.io/gmarket/GmarketSans.css" rel="stylesheet">
     <style>
         * {
@@ -13,14 +13,13 @@
             padding: 0;
         }
 
-        a {
-            font-family: 'GmarketSans';
-            color: #000;
-            text-decoration: none;
-        }
-
         li {
             list-style: none;
+        }
+
+        a {
+            text-decoration: none;
+            color: #000;
         }
 
         #wrap {
@@ -112,30 +111,79 @@
 
         .nav>ul>li>a {
             padding: 10px 50px;
-            background-color: #c7c7c7;
-
+            display: inline-block;
+            background-color: #d9d9d9;
         }
 
         .nav>ul>li>a:hover {
-            background-color: #696969;
+            background-color: #878383;
         }
 
         .nav>ul>li>ul {
             position: absolute;
             left: 0;
-            top: 45px;
+            top: 40px;
+            width: 100%;
             text-align: center;
-            padding: 10px;
         }
 
         .nav>ul>li>ul>li {
             /* display: none; */
+            width: 100%;
         }
 
-        .nav>ul>li>ul>li>a {}
+        .nav>ul>li>ul>li>a {
+            display: inline-block;
+            padding: 10px;
+            width: 100%;
+            background-color: #bcbcbc;
+            box-sizing: border-box;
+        }
 
         .nav>ul>li>ul>li>a:hover {
-            background-color: #696969;
+            background-color: #878383;
+        }
+
+        /* slider */
+        .sliderWrap {
+            position: relative;
+        }
+
+        .sliderWrap>div {
+            display: none;
+            /* 모든 이미지 안보이게 처리 후 */
+        }
+
+        .sliderWrap>div:first-child {
+            display: block;
+            /* 첫번째 이미지만 보이게 설정 */
+        }
+
+        .sliderWrap .slider {
+            position: absolute;
+            left: 0;
+            top: 0;
+        }
+
+        .sliderWrap .slider img {
+            vertical-align: top;
+            /*이미지 설정시 보이지않는 여백 없애주는속성 필수! */
+        }
+
+        .sliderWrap .slider span {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            /*가운데 효과*/
+            background-color: rgba(0, 0, 0, 0.4);
+            padding: 10px 20px;
+            color: #fff;
+        }
+
+        /* 자바스크립트 CSS */
+        .sliderWrap .div {
+            display: block;
         }
     </style>
 </head>
@@ -184,6 +232,20 @@
         <!-- //header -->
 
         <div id="slider">
+            <div class="sliderWrap">
+                <div class="slider s1">
+                    <img src="https://webstoryboy.github.io/webstoryboy/w_webd/slider/slider01.jpg" alt="이미지 설명">
+                    <span>이미지1</span>
+                </div>
+                <div class="slider s2">
+                    <img src="https://webstoryboy.github.io/webstoryboy/w_webd/slider/slider02.jpg" alt="이미지 설명">
+                    <span>이미지2</span>
+                </div>
+                <div class="slider s3">
+                    <img src="https://webstoryboy.github.io/webstoryboy/w_webd/slider/slider03.jpg" alt="이미지 설명">
+                    <span>이미지3</span>
+                </div>
+            </div>
         </div>
         <!-- //slider -->
 
@@ -202,6 +264,53 @@
         <!-- //footer -->
     </div>
     <!-- //wrap -->
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script>
+        // 1차 메뉴를 오버하면 서브메뉴를 각각 보여줘라!
+        // $(".nav>ul>li").mouseover(function () {
+        //     $(this).find(".submenu").stop().fadeIn(900);
+        // });
+
+        // $(".nav>ul>li").mouseout(function () {
+        //     $(this).find(".submenu").stop().fadeOut(100);
+        // });       
+    </script>
+    <script>
+        /*제이쿼리용 이미지 슬라이드 처리*/
+        // $(function () {              // 문서가 로딩이 되면 실행해라
+        //     let currentIndex = 0;   // 현재 이미지
+
+        //     setInterval(function () {    // 3초에 한번씩 실행 (set... 일정하게실행해줌)
+        //         let nextIndex = (currentIndex + 1) % 3  // 1 2 0 1 2 0..
+
+        //         $(".slider").eq(0).fadeOut();   // 첫번째 이미지를 사라짐  0 1 2 0 1 2..
+        //         $(".slider").eq(1).fadeIn();   // 두번째 이미지가 나타남  1 2 0 1 2 0..
+
+        //         currentIndex = nextIndex;  // 두번째 인덱스값을 현재 인덱스값에 저장
+        // console.log("currentIndex:" + currentIndex)
+        // console.log("nextIndex:" + nextIndex)
+        // }, 3000);
+        // });
+    </script>
+    <script>
+        window.onload = function () {
+            let currentIndex = 0;  // 현재 이미지
+            const slider = document.querySelectorAll(".slider");   // 모든 이미지를 변수에 저장
+            slider.forEach(img => img.style.opacity = "0");       // 모든 이미지를 투명하게 처리
+            slider[0].style.opacity = "1";                       // 첫번째 이미지만 보이게 처리
+
+            setInterval(() => {     // 3초에 한번씩 실행해라
+                let nextIndex = (currentIndex + 1) % slider.length;  // 1 2 0 1 2.. 무한반복
+
+                slider[currentIndex].style.opacity = "0";  // 첫번째 이미지 사라짐
+                slider[nextIndex].style.opacity = "1";    // 두번째 이미지 나타남
+                slider.forEach(img => img.style.transition = "all 1s");   // 이미지 애니메이션 효과추가
+
+                currentIndex = nextIndex;   // 두번째 인덱스값을 현재 인덱스값에 저장
+            }, 3000);
+        }
+    </script>
 </body>
 
 </html>
