--- a/webd/testa유형.html
+++ b/webd/testa유형.html
@@ -285,7 +285,7 @@
         //         let nextIndex = (currentIndex + 1) % 3  // 1 2 0 1 2 0..
 
         //         $(".slider").eq(0).fadeOut();   // 첫번째 이미지를 사라짐  0 1 2 0 1 2..
-        //         $(".slider").eq(1).fadeIn();   // 두번째 이미지가 나타남  1 2 0 1 2 0..
+        //         $(".slider").eq(1).fadeIn();   // 두번째 이미지가 나타남  1 2 0 1 2 0.. 위에 무한반복실행 한줄과 같음
 
         //         currentIndex = nextIndex;  // 두번째 인덱스값을 현재 인덱스값에 저장
         // console.log("currentIndex:" + currentIndex)
