--- a/webd/1menu/jieun/menu1.html
+++ b/webd/1menu/jieun/menu1.html
@@ -23,6 +23,7 @@
       color: #000;
     }
 
+
     li {
       list-style: none;
     }
@@ -41,7 +42,7 @@
 
     #header .nav {
       width: 80%;
-      background-color: #e3e3e3;
+      background-color: yellow
     }
 
     #main {
@@ -101,30 +102,6 @@
       height: 100px;
       background-color: #c7c7c7;
     }
-
-    .nav {}
-
-    .nav ul {
-      display: flex;
-      justify-content: right;
-      margin-top: 30px;
-    }
-
-    .nav ul li {}
-
-    .nav ul li a {}
-
-    .nav ul li a:hover {}
-
-    .nav ul li ul {}
-
-    .nav ul li ul li {
-      display: none;
-    }
-
-    .nav ul li ul li a {}
-
-    .nav ul li ul li a:hover {}
   </style>
 </head>
 
