--- a/webd/1menu/jieun/test-menusimple.html
+++ b/webd/1menu/jieun/test-menusimple.html
@@ -11,6 +11,8 @@
             margin: 0;
             padding: 0;
             font-family: 'GmarketSans';
+            /* CSS 디버깅설정 */
+            outline: 1px solid #000 !important;
         }
 
         #wrap {
