--- a/webd/1menu/menu-1.html
+++ b/webd/1menu/menu-1.html
@@ -3,15 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M-4</title>
+    <title>웹디자인기능사 메뉴 M-1</title>
     <link href="https://webfontworld.github.io/gmarket/GmarketSans.css" rel="stylesheet">
     <style>
         * {
             margin: 0;
             padding: 0;
-            /* CSS 디버깅설정 */
-            outline: 1px solid #000 !important;
+            font-family: 'GmarketSans';
         }
 
         li {
@@ -21,7 +21,6 @@
         a {
             text-decoration: none;
             color: #000;
-            font-family: 'GmarketSans';
         }
 
         #wrap {
@@ -45,39 +44,33 @@
             background-color: #e3e3e3;
         }
 
-        #main {
-            width: 100%;
-            height: 500px;
-            background-color: #e3e3e3;
-        }
-
-        .slider {
+        #slider {
             width: 100%;
             height: 300px;
             background-color: #d9d9d9;
         }
 
-        .contents {
+        #contents {
             width: 100%;
             display: flex;
         }
 
-        .content1 {
-            width: 33.333%;
-            height: 200px;
-            background-color: #dbdbdb;
-        }
-
-        .content2 {
-            width: 33.3333%;
-            height: 200px;
-            background-color: #dcdcdc;
-        }
-
-        .content3 {
+        #contents .content1 {
             width: 33.3333%;
             height: 200px;
             background-color: #d1d1d1;
+        }
+
+        #contents .content2 {
+            width: 33.3333%;
+            height: 200px;
+            background-color: #c7c7c7;
+        }
+
+        #contents .content3 {
+            width: 33.3333%;
+            height: 200px;
+            background-color: #bcbcbc;
         }
 
         #footer {
@@ -85,27 +78,25 @@
             display: flex;
         }
 
-        .footer1 {
+        #footer .footer1 {
             width: 20%;
             height: 100px;
-            background-color: #c1c1c1;
+            background-color: #b1b1b1;
         }
 
-        .footer2 {
+        #footer .footer2 {
             width: 60%;
             height: 100px;
-            background-color: #c9c9c9;
+            background-color: #a3a3a3;
         }
 
-        .footer3 {
+        #footer .footer3 {
             width: 20%;
             height: 100px;
-            background-color: #c7c7c7;
+            background-color: #9d9d9d;
         }
 
         /* nav */
-        .nav {}
-
         .nav>ul {
             display: flex;
             justify-content: right;
@@ -129,89 +120,126 @@
         .nav>ul>li>ul {
             position: absolute;
             left: 0;
-            top: 38;
-            background-color: #C7C7C7;
-            /* W: 100P; */
-            /* text-align: center; */
-        }
-
-        .nav>ul>li>ul>li {
-            /* display: none; */
+            top: 38px;
+            background-color: #c7c7c7;
+            width: 100%;
+            text-align: center;
+            display: none;
         }
 
         .nav>ul>li>ul>li>a {
             display: inline-block;
-
-
-
-
+            padding: 10px;
+            background-color: #c1c1c1;
+            width: 100%;
+            box-sizing: border-box;
         }
 
-        .nav>ul>li>ul>li>a:hover {}
+        .nav>ul>li>ul>li>a:hover {
+            background-color: #8f8f8f;
+        }
+
+        /* 자바스크립트용 CSS */
+        .nav>ul>li>ul {
+            display: block;
+            height: 0;
+            /* height: 155px; */
+            overflow: hidden;
+            transition: all 600ms;
+        }
     </style>
 </head>
 
 <body>
     <div id="wrap">
-        <header id="header">
-            <h1 class="logo"></h1>
+        <div id="header">
+            <div class="logo"></div>
             <nav class="nav">
                 <ul>
-                    <li><a href="#">menu1</a>
+                    <li><a href="#">메뉴1</a>
                         <ul class="submenu">
-                            <li><a href="#">submenu1-1</a></li>
-                            <li><a href="#">submenu1-2</a></li>
-                            <li><a href="#">submenu1-3</a></li>
-                            <li><a href="#">submenu1-4</a></li>
+                            <li><a href="#">서브메뉴1-1</a></li>
+                            <li><a href="#">서브메뉴1-2</a></li>
+                            <li><a href="#">서브메뉴1-3</a></li>
+                            <li><a href="#">서브메뉴1-4</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">menu2</a>
+                    <li><a href="#">메뉴2</a>
                         <ul class="submenu">
-                            <li><a href="#">submenu2-1</a></li>
-                            <li><a href="#">submenu2-2</a></li>
-                            <li><a href="#">submenu2-3</a></li>
-                            <li><a href="#">submenu2-4</a></li>
+                            <li><a href="#">서브메뉴2-1</a></li>
+                            <li><a href="#">서브메뉴2-2</a></li>
+                            <li><a href="#">서브메뉴2-3</a></li>
+                            <li><a href="#">서브메뉴2-4</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">menu3</a>
+                    <li><a href="#">메뉴3</a>
                         <ul class="submenu">
-                            <li><a href="#">submenu3-1</a></li>
-                            <li><a href="#">submenu3-2</a></li>
-                            <li><a href="#">submenu3-3</a></li>
-                            <li><a href="#">submenu3-4</a></li>
+                            <li><a href="#">서브메뉴3-1</a></li>
+                            <li><a href="#">서브메뉴3-2</a></li>
+                            <li><a href="#">서브메뉴3-3</a></li>
+                            <li><a href="#">서브메뉴3-4</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">menu4</a>
+                    <li><a href="#">메뉴4</a>
                         <ul class="submenu">
-                            <li><a href="#">submenu4-1</a></li>
-                            <li><a href="#">submenu4-2</a></li>
-                            <li><a href="#">submenu4-3</a></li>
-                            <li><a href="#">submenu4-4</a></li>
+                            <li><a href="#">서브메뉴4-1</a></li>
+                            <li><a href="#">서브메뉴4-2</a></li>
+                            <li><a href="#">서브메뉴4-3</a></li>
+                            <li><a href="#">서브메뉴4-4</a></li>
                         </ul>
                     </li>
                 </ul>
             </nav>
-        </header>
+        </div>
         <!-- //header -->
 
-        <main id="main">
-            <article class="slider"></article>
-            <section class="contents">
-                <div class="content1"></div>
-                <div class="content2"></div>
-                <div class="content3"></div>
-            </section>
-        </main>
-        <!-- //main -->
+        <div id="slider">
+        </div>
+        <!-- //slider -->
 
-        <footer id="footer">
+        <div id="contents">
+            <div class="content1"></div>
+            <div class="content2"></div>
+            <div class="content3"></div>
+        </div>
+        <!-- //contents -->
+
+        <div id="footer">
             <div class="footer1"></div>
             <div class="footer2"></div>
             <div class="footer3"></div>
-        </footer>
+        </div>
         <!-- //footer -->
     </div>
     <!-- //wrap -->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- <script>
+        $(function(){
+            $(".nav > ul > li").mouseover(function(){
+                $(this).find(".submenu").stop().slideDown();
+            });
+            $(".nav > ul > li").mouseout(function(){
+                $(this).find(".submenu").stop().slideUp();
+            });
+        });
+    </script> -->
+    <script>
+        window.onload = function () {
+            let navList = document.querySelectorAll(".nav > ul > li");
+
+            navList.forEach(function (navItem) {
+                navItem.addEventListener("mouseover", function () {
+                    this.querySelector(".submenu").style.height = "155px";
+                });
+            });
+            navList.forEach(function (navItem) {
+                navItem.addEventListener("mouseout", function () {
+                    this.querySelector(".submenu").style.height = "0px";
+                });
+            });
+        }
+    </script>
 </body>
 
 </html>
