--- a/webd/1menu/menu-2.html
+++ b/webd/1menu/menu-2.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>웹디자인기능사 레이아웃 M-2</title>
+    <title>웹디자인기능사 메뉴 M-2</title>
+    <link href="https://webfontworld.github.io/gmarket/GmarketSans.css" rel="stylesheet">
     <style>
         * {
             margin: 0;
             padding: 0;
+            font-family: 'GmarketSans';
         }
 
         li {
@@ -97,7 +100,7 @@
         .nav>ul {
             display: flex;
             justify-content: right;
-            margin: 30px;
+            margin-top: 30px;
         }
 
         .nav>ul>li {
@@ -117,7 +120,7 @@
         .nav>ul>li>ul {
             position: absolute;
             left: 0;
-            top: 38;
+            top: 38px;
             width: 100%;
             text-align: center;
             display: none;
@@ -132,10 +135,10 @@
         }
 
         .nav>ul>li>ul>li>a:hover {
-            background-color: #787878;
+            background-color: #8f8f8f;
         }
 
-        /* 자바스크립트용 */
+        /* 자바스크립트 CSS */
         .nav>ul>li>ul {
             display: block;
             height: 0;
@@ -146,82 +149,102 @@
 </head>
 
 <body>
-    <div id="wrap">
-        <div id="header">
-            <div class="logo"></div>
-            <nav class="nav">
-                <ul>
-                    <li><a href="#">메뉴1</a>
-                        <ul class="submenu">
-                            <li><a href="#">서브메뉴1-1</a></li>
-                            <li><a href="#">서브메뉴1-2</a></li>
-                            <li><a href="#">서브메뉴1-3</a></li>
-                            <li><a href="#">서브메뉴1-4</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">메뉴2</a>
-                        <ul class="submenu">
-                            <li><a href="#">서브메뉴1-1</a></li>
-                            <li><a href="#">서브메뉴1-2</a></li>
-                            <li><a href="#">서브메뉴1-3</a></li>
-                            <li><a href="#">서브메뉴1-4</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">메뉴3</a>
-                        <ul class="submenu">
-                            <li><a href="#">서브메뉴1-1</a></li>
-                            <li><a href="#">서브메뉴1-2</a></li>
-                            <li><a href="#">서브메뉴1-3</a></li>
-                            <li><a href="#">서브메뉴1-4</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">메뉴4</a>
-                        <ul class="submenu">
-                            <li><a href="#">서브메뉴1-1</a></li>
-                            <li><a href="#">서브메뉴1-2</a></li>
-                            <li><a href="#">서브메뉴1-3</a></li>
-                            <li><a href="#">서브메뉴1-4</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-        <!-- //header -->
 
-        <div id="slider">
-        </div>
-        <!-- //slider -->
+    <body>
+        <div id="wrap">
+            <div id="header">
+                <div class="logo"></div>
+                <nav class="nav">
+                    <ul>
+                        <li>
+                            <a href="#">메뉴1</a>
+                            <ul class="submenu">
+                                <li><a href="#">서브메뉴1-1</a></li>
+                                <li><a href="#">서브메뉴1-2</a></li>
+                                <li><a href="#">서브메뉴1-3</a></li>
+                                <li><a href="#">서브메뉴1-4</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">메뉴2</a>
+                            <ul class="submenu">
+                                <li><a href="#">서브메뉴2-1</a></li>
+                                <li><a href="#">서브메뉴2-2</a></li>
+                                <li><a href="#">서브메뉴2-3</a></li>
+                                <li><a href="#">서브메뉴2-4</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">메뉴3</a>
+                            <ul class="submenu">
+                                <li><a href="#">서브메뉴3-1</a></li>
+                                <li><a href="#">서브메뉴3-2</a></li>
+                                <li><a href="#">서브메뉴3-3</a></li>
+                                <li><a href="#">서브메뉴3-4</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">메뉴4</a>
+                            <ul class="submenu">
+                                <li><a href="#">서브메뉴4-1</a></li>
+                                <li><a href="#">서브메뉴4-2</a></li>
+                                <li><a href="#">서브메뉴4-3</a></li>
+                                <li><a href="#">서브메뉴4-4</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <!-- //header -->
 
-        <div id="contents">
-            <div class="content1"></div>
-            <div class="content2"></div>
-            <div class="content3"></div>
-        </div>
-        <!-- //contents -->
+            <div id="slider">
+            </div>
+            <!-- //slider -->
 
-        <div id="footer">
-            <div class="footer1"></div>
-            <div class="footer2"></div>
-            <div class="footer3"></div>
+            <div id="contents">
+                <div class="content1"></div>
+                <div class="content2"></div>
+                <div class="content3"></div>
+            </div>
+            <!-- //contents -->
+
+            <div id="footer">
+                <div class="footer1"></div>
+                <div class="footer2"></div>
+                <div class="footer3"></div>
+            </div>
+            <!-- //footer -->
         </div>
-        <!-- //footer -->
-    </div>
-    <!-- //wrap -->
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <!-- //wrap -->
+    </body>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- <script>
+        $(function(){
+            $(".nav > ul > li").mouseover(function(){
+                $(".nav > ul > li > ul").stop().slideDown();
+            });
+            $(".nav > ul > li").mouseout(function(){
+                $(".nav > ul > li > ul").stop().slideUp();
+            });
+        });
+    </script> -->
     <script>
-        $(function () {
-            $(".nav>ul>li").mouseover(function () {
-                console.log("dd")
-                $(".nav>ul>li>ul").stop().slideDown();
-                $(this).find("/submenu").stop().slideDown
+        window.onload = function () {
+            let navList = document.querySelector(".nav > ul");
+
+            navList.addEventListener("mouseover", function () {
+                navList.querySelectorAll(".submenu").forEach(sub => {
+                    sub.style.height = "155px";
+                });
             });
-            $(".nav>ul>li").mouseout(function () {
-                $(".nav>ul>li>ul").stop().slideUp();
+            navList.addEventListener("mouseout", function () {
+                navList.querySelectorAll(".submenu").forEach(sub => {
+                    sub.style.height = "0px";
+                });
             });
-        }); -->
+        }
     </script>
-
 </body>
-
 
 </html>
