--- a/webd/1menu/menu-3.html
+++ b/webd/1menu/menu-3.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M-4</title>
+    <title>웹디자인기능사 메뉴 M-3</title>
     <link href="https://webfontworld.github.io/gmarket/GmarketSans.css" rel="stylesheet">
     <style>
         * {
             margin: 0;
             padding: 0;
             font-family: 'GmarketSans';
-        }
-
-        #wrap {
-            width: 1200px;
-            margin: 0 auto;
         }
 
         li {
@@ -25,6 +21,11 @@
         a {
             text-decoration: none;
             color: #000;
+        }
+
+        #wrap {
+            width: 1200px;
+            margin: 0 auto;
         }
 
         #header {
@@ -43,39 +44,33 @@
             background-color: #e3e3e3;
         }
 
-        #main {
-            width: 100%;
-            height: 500px;
-            background-color: #e3e3e3;
-        }
-
-        .slider {
+        #slider {
             width: 100%;
             height: 300px;
             background-color: #d9d9d9;
         }
 
-        .contents {
+        #contents {
             width: 100%;
             display: flex;
         }
 
-        .content1 {
-            width: 33.333%;
-            height: 200px;
-            background-color: #dbdbdb;
-        }
-
-        .content2 {
-            width: 33.3333%;
-            height: 200px;
-            background-color: #dcdcdc;
-        }
-
-        .content3 {
+        #contents .content1 {
             width: 33.3333%;
             height: 200px;
             background-color: #d1d1d1;
+        }
+
+        #contents .content2 {
+            width: 33.3333%;
+            height: 200px;
+            background-color: #c7c7c7;
+        }
+
+        #contents .content3 {
+            width: 33.3333%;
+            height: 200px;
+            background-color: #bcbcbc;
         }
 
         #footer {
@@ -83,22 +78,22 @@
             display: flex;
         }
 
-        .footer1 {
+        #footer .footer1 {
             width: 20%;
             height: 100px;
-            background-color: #c1c1c1;
+            background-color: #b1b1b1;
         }
 
-        .footer2 {
+        #footer .footer2 {
             width: 60%;
             height: 100px;
-            background-color: #c9c9c9;
+            background-color: #a3a3a3;
         }
 
-        .footer3 {
+        #footer .footer3 {
             width: 20%;
             height: 100px;
-            background-color: #c7c7c7;
+            background-color: #9d9d9d;
         }
 
         /* nav */
@@ -107,7 +102,7 @@
         }
 
         #header::after {
-            content: '가상요소';
+            content: '';
             width: 100%;
             height: 0px;
             background-color: #808080;
@@ -115,11 +110,11 @@
             left: 0;
             top: 100px;
             z-index: 1;
-            transition: all 600ms;
+            transition: all 400ms;
         }
 
         #header.on::after {
-            height: 156px;
+            height: 155px;
         }
 
         .nav {
@@ -129,7 +124,7 @@
         .nav>ul {
             display: flex;
             justify-content: right;
-            margin-top: 62px;
+            margin-top: 61px;
         }
 
         .nav>ul>li {
@@ -137,8 +132,8 @@
         }
 
         .nav>ul>li>a {
-            padding: 10px 50px;
             display: inline-block;
+            padding: 10px 50px;
             background-color: #b0b0b0;
         }
 
@@ -149,12 +144,9 @@
         .nav>ul>li>ul {
             position: absolute;
             left: 0;
-            top: 36px;
+            top: 39px;
             width: 100%;
             text-align: center;
-        }
-
-        .nav>ul>li>ul>li {
             display: none;
         }
 
@@ -166,77 +158,118 @@
         }
 
         .nav>ul>li>ul>li>a:hover {
-            background-color: #696969;
+            background-color: #8f8f8f;
+        }
+
+        /* 자바스크립트용 CSS */
+        .nav>ul>li>ul {
+            display: block;
+            height: 0;
+            overflow: hidden;
+            transition: all 400ms;
         }
     </style>
 </head>
 
 <body>
-    <div id="wrap">
-        <header id="header">
-            <h1 class="logo"></h1>
-            <nav class="nav">
-                <ul>
-                    <li><a href="#">menu1</a>
-                        <ul class="submenu">
-                            <li><a href="#">menu1-1</a></li>
-                            <li><a href="#">menu1-2</a></li>
-                            <li><a href="#">menu1-3</a></li>
-                            <li><a href="#">menu1-4</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">menu2</a>
-                        <ul class="submenu">
-                            <li><a href="#">menu2-1</a></li>
-                            <li><a href="#">menu2-2</a></li>
-                            <li><a href="#">menu2-3</a></li>
-                            <li><a href="#">menu2-4</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">menu3</a>
-                        <ul class="submenu">
-                            <li><a href="#">menu3-1</a></li>
-                            <li><a href="#">menu3-2</a></li>
-                            <li><a href="#">menu3-3</a></li>
-                            <li><a href="#">menu3-4</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">menu4</a>
-                        <ul class="submenu">
-                            <li><a href="#">menu4-1</a></li>
-                            <li><a href="#">menu4-2</a></li>
-                            <li><a href="#">menu4-3</a></li>
-                            <li><a href="#">menu4-4</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <!-- //header -->
-        <main id="main">
-            <article class="slider">
 
-            </article>
+    <body>
+        <div id="wrap">
+            <div id="header">
+                <div class="logo"></div>
+                <nav class="nav">
+                    <ul>
+                        <li>
+                            <a href="#">메뉴1</a>
+                            <ul class="submenu">
+                                <li><a href="#">서브메뉴1-1</a></li>
+                                <li><a href="#">서브메뉴1-2</a></li>
+                                <li><a href="#">서브메뉴1-3</a></li>
+                                <li><a href="#">서브메뉴1-4</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">메뉴2</a>
+                            <ul class="submenu">
+                                <li><a href="#">서브메뉴2-1</a></li>
+                                <li><a href="#">서브메뉴2-2</a></li>
+                                <li><a href="#">서브메뉴2-3</a></li>
+                                <li><a href="#">서브메뉴2-4</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">메뉴3</a>
+                            <ul class="submenu">
+                                <li><a href="#">서브메뉴3-1</a></li>
+                                <li><a href="#">서브메뉴3-2</a></li>
+                                <li><a href="#">서브메뉴3-3</a></li>
+                                <li><a href="#">서브메뉴3-4</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">메뉴4</a>
+                            <ul class="submenu">
+                                <li><a href="#">서브메뉴4-1</a></li>
+                                <li><a href="#">서브메뉴4-2</a></li>
+                                <li><a href="#">서브메뉴4-3</a></li>
+                                <li><a href="#">서브메뉴4-4</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <!-- //header -->
+
+            <div id="slider">
+            </div>
             <!-- //slider -->
-            <section class="contents">
+
+            <div id="contents">
                 <div class="content1"></div>
                 <div class="content2"></div>
                 <div class="content3"></div>
-            </section>
+            </div>
             <!-- //contents -->
-        </main>
-        <!-- //main -->
-        <footer id="footer">
-            <div class="footer1"></div>
-            <div class="footer2"></div>
-            <div class="footer3"></div>
-        </footer>
-        <!-- //footer -->
-    </div>
-    <!-- //wrap -->
+
+            <div id="footer">
+                <div class="footer1"></div>
+                <div class="footer2"></div>
+                <div class="footer3"></div>
+            </div>
+            <!-- //footer -->
+        </div>
+        <!-- //wrap -->
+    </body>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>
+        // $(function(){
+        //     $(".nav > ul > li").mouseover(function(){
+        //         $(".nav > ul > li > ul").stop().fadeIn(900);
+        //         $("#header").addClass("on");
+        //     });
+        //     $(".nav > ul > li").mouseout(function(){
+        //         $(".nav > ul > li > ul").stop().fadeOut(100);
+        //         $("#header").removeClass("on");
+        //     });
+        // });
+    </script>
+    <script>
+        let navList = document.querySelector(".nav > ul");
 
+        navList.addEventListener("mouseover", () => {
+            navList.querySelectorAll(".submenu").forEach(sub => {
+                sub.style.height = "155px";
+            });
+            document.getElementById("header").classList.add("on");
+        });
+
+        navList.addEventListener("mouseout", () => {
+            navList.querySelectorAll(".submenu").forEach(sub => {
+                sub.style.height = "0px";
+            });
+            document.getElementById("header").classList.remove("on");
+        });
     </script>
 </body>
 
