--- a/webd/1menu/menu-4.html
+++ b/webd/1menu/menu-4.html
@@ -3,77 +3,70 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M-4</title>
+    <title>웹디자인기능사 레이아웃 M-4</title>
+    <link href="https://webfontworld.github.io/gmarket/GmarketSans.css" rel="stylesheet">
     <style>
         * {
             margin: 0;
             padding: 0;
         }
 
-        li {
-            list-style: none;
-        }
-
-        a {
-            text-decoration: none;
-            color: #000;
-        }
-
         #wrap {
-            width: 1200px;
-            margin: 0 auto;
-        }
-
-        #header {
             width: 100%;
             display: flex;
+            flex-wrap: wrap;
         }
 
-        #header .logo {
-            width: 20%;
+        #aside {
+            width: 200px;
+        }
+
+        #aside .logo {
+            width: 100%;
             height: 100px;
             background-color: #efefef;
         }
 
-        #header .nav {
-            width: 80%;
+        #aside .nav {
+            width: 100%;
+            height: 750px;
             background-color: #e3e3e3;
         }
 
         #main {
-            width: 100%;
-            height: 500px;
+            width: calc(100% - 200px);
+            height: 850px;
             background-color: #e3e3e3;
         }
 
-        .slider {
+        #slider {
             width: 100%;
-            height: 300px;
+            height: 400px;
             background-color: #d9d9d9;
+            position: relative;
         }
 
-        .contents {
+        #slider .link {
+            position: absolute;
+            right: 0;
+            top: 0;
+            width: 100px;
+            height: 300px;
+            background-color: #9d9d9d;
+        }
+
+        #banner {
             width: 100%;
-            display: flex;
-        }
-
-        .content1 {
-            width: 33.333%;
-            height: 200px;
-            background-color: #dbdbdb;
-        }
-
-        .content2 {
-            width: 33.3333%;
-            height: 200px;
-            background-color: #dcdcdc;
-        }
-
-        .content3 {
-            width: 33.3333%;
             height: 200px;
             background-color: #d1d1d1;
+        }
+
+        #contents {
+            width: 100%;
+            height: 250px;
+            background-color: #c7c7c7;
         }
 
         #footer {
@@ -81,99 +74,126 @@
             display: flex;
         }
 
-        .footer1 {
+        #footer .footer1 {
             width: 20%;
             height: 100px;
-            background-color: #c1c1c1;
+            background-color: #bcbcbc;
         }
 
-        .footer2 {
+        #footer .footer2 {
             width: 60%;
             height: 100px;
-            background-color: #c9c9c9;
+            background-color: #b1b1b1;
         }
 
-        .footer3 {
+        #footer .footer3 {
             width: 20%;
             height: 100px;
-            background-color: #c7c7c7;
+            background-color: #a3a3a3;
         }
 
         /* nav */
-        nav {}
-
-        nav>ul {}
-
-        nav>ul>li {}
-
-        nav>ul>li>a {
-            display: block;
-            padding: 10px;
-            background-color: #c1c1c1;
-            text-align: center;
+        a {
+            text-decoration: none;
+            color: #000;
         }
 
-        nav>ul>li>ul {}
+        li {
+            list-style: none;
+        }
 
-        nav>ul>li>ul>li {}
+        .nav>ul>li>a {
+            display: block;
+            padding: 10px;
+            text-align: center;
+            background-color: #ccc;
+        }
 
-        nav>ul>li>ul>li>a {}
+        .nav>ul>li>a:hover {
+            background-color: #a3a3a3;
+        }
+
+        .nav>ul>li>ul {
+            display: none;
+        }
+
+        .nav>ul>li>ul>li>a {
+            display: block;
+            padding: 10px;
+            background-color: #ddd;
+        }
+
+        .nav>ul>li>ul>li>a:hover {
+            background-color: #a3a3a3;
+        }
+
+        /* 자바스크립트용 */
+        .nav>ul>li>ul {
+            display: block;
+            height: 0;
+            overflow: hidden;
+            transition: all 400ms;
+        }
     </style>
 </head>
 
 <body>
     <div id="wrap">
-        <header id="header">
+        <aside id="aside">
             <h1 class="logo"></h1>
             <nav class="nav">
                 <ul>
                     <li><a href="#">menu1</a>
                         <ul class="submenu">
-                            <li><a href="#">submenu1-1</a></li>
-                            <li><a href="#">submenu1-2</a></li>
-                            <li><a href="#">submenu1-3</a></li>
-                            <li><a href="#">submenu1-4</a></li>
+                            <li><a href="#">menu1-1</a></li>
+                            <li><a href="#">menu1-2</a></li>
+                            <li><a href="#">menu1-3</a></li>
+                            <li><a href="#">menu1-4</a></li>
                         </ul>
                     </li>
                     <li><a href="#">menu2</a>
                         <ul class="submenu">
-                            <li><a href="#">submenu2-1</a></li>
-                            <li><a href="#">submenu2-2</a></li>
-                            <li><a href="#">submenu2-3</a></li>
-                            <li><a href="#">submenu2-4</a></li>
+                            <li><a href="#">menu2-1</a></li>
+                            <li><a href="#">menu2-2</a></li>
+                            <li><a href="#">menu2-3</a></li>
+                            <li><a href="#">menu2-4</a></li>
                         </ul>
                     </li>
                     <li><a href="#">menu3</a>
                         <ul class="submenu">
-                            <li><a href="#">submenu3-1</a></li>
-                            <li><a href="#">submenu3-2</a></li>
-                            <li><a href="#">submenu3-3</a></li>
-                            <li><a href="#">submenu3-4</a></li>
+                            <li><a href="#">menu3-1</a></li>
+                            <li><a href="#">menu3-2</a></li>
+                            <li><a href="#">menu3-3</a></li>
+                            <li><a href="#">menu3-4</a></li>
                         </ul>
                     </li>
                     <li><a href="#">menu4</a>
                         <ul class="submenu">
-                            <li><a href="#">submenu4-1</a></li>
-                            <li><a href="#">submenu4-2</a></li>
-                            <li><a href="#">submenu4-3</a></li>
-                            <li><a href="#">submenu4-4</a></li>
+                            <li><a href="#">menu4-1</a></li>
+                            <li><a href="#">menu4-2</a></li>
+                            <li><a href="#">menu4-3</a></li>
+                            <li><a href="#">menu4-4</a></li>
                         </ul>
                     </li>
                 </ul>
             </nav>
-        </header>
-        <!-- //header -->
 
+        </aside>
+        <!-- //aside -->
         <main id="main">
-            <article class="slider"></article>
-            <section class="contents">
-                <div class="content1"></div>
-                <div class="content2"></div>
-                <div class="content3"></div>
-            </section>
-        </main>
-        <!-- //main -->
+            <article id="slider">
+                <div class="link"></div>
+            </article>
+            <!-- //slider -->
 
+            <article id="banner">
+            </article>
+            <!-- //banner -->
+
+            <section id="contents">
+            </section>
+            <!-- //contents -->
+        </main>
         <footer id="footer">
             <div class="footer1"></div>
             <div class="footer2"></div>
@@ -182,12 +202,31 @@
         <!-- //footer -->
     </div>
     <!-- //wrap -->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>
-        $(".nav>ul>li").mouseover(function () {
-            $(this).find(".submenu").stop().slideDown();
-        });
+        // $(".nav>ul>li").mouseover(function () {             
+        //     $(this).find(".submenu").stop().slideDown();
+        // });
+        // $(".nav>ul>li").mouseout(function () {
+        //     $(this).find(".submenu").stop().slideUp();
+        // });
+    </script>
+    <script>
+        window.onload = function () {
+            let navList = document.querySelectorAll(".nav>ul>li");
 
-
+            navList.forEach(navItem => {
+                navItem.addEventListener("mouseover", function () {
+                    this.querySelector(".submenu").style.height = "155px";
+                });
+            });
+            navList.forEach(navItem => {
+                navItem.addEventListener("mouseout", function () {
+                    this.querySelector(".submenu").style.height = "0px";
+                });
+            });
+        };
     </script>
 </body>
 
