--- a/javascript/object07.html
+++ b/javascript/object07.html
@@ -37,6 +37,52 @@
 
     <main id="main">
         <div class="main__menu container">
+            <h2>마우스</h2>
+            <ul>
+                <li><a href="#">01. 이벤트 메서드 : addEventListerner("click) : 클릭했을 때</a></li>
+                <li><a href="#">01. 이벤트 메서드 : addEventListerner("dblclick) : 더블 클릭했을 때</a></li>
+                <li><a href="#">01. 이벤트 메서드 : addEventListerner("load") : 문서 로딩이 끝났을 때</a></li>
+                <li><a href="#">01. 이벤트 메서드 : addEventListerner("error") : 문서가 정확히 로딩되지 않았을 때</a></li>
+                <li><a href="#">01. 이벤트 메서드 : addEventListerner("scroll") :스크롤 했을 때</a></li>
+                <li><a href="#">01. 이벤트 메서드 : addEventListerner("resize") : 브라우저 사이즈가 변경 됐을 때</a></li>
+                <li><a href="#">01. 이벤트 메서드 : addEventListerner("selectatart") : 텍스트 선택을 시작 했을 때</a></li>
+
+            </ul>
+
+            <h2>마우스 포인터</h2>
+            <ul>
+                <li><a href="#">01. 이벤트 메서드 : addEventListerner("mousedown") : 마우스 버튼을 클릭했을 때</a></li>
+                <li><a href="#">02. 이벤트 메서드 : addEventListerner("mouseup") : 마우스 버튼을 때는 경우</a></li>
+                <li><a href="#">03. 이벤트 메서드 : addEventListerner("mousemove") : 마우스를 움직이는 경우</a></li>
+                <li><a href="#">04. 이벤트 메서드 : addEventListerner("mouseenter") : 요소 위에 </a></li>
+                <li><a href="#">05. 이벤트 메서드 : addEventListerner("mouseleave") :때</a></li>
+                <li><a href="#">06. 이벤트 메서드 : addEventListerner("mouseover") : 을 때</a></li>
+                <li><a href="#">07. 이벤트 메서드 : addEventListerner("mouseout") : 했을 때</a></li>
+            </ul>
+
+            <h2>마우스 속성</h2>
+            <ul>
+                <li><a href="#">01. 이벤트 속성 : clientX : 브라우저 기준</a></li>
+                <li><a href="#">02. 이벤트 속성 : clientY : 브라우저 기준</a></li>
+                <li><a href="#">03. 이벤트 속성 : offsetX : 요소를 기준</a></li>
+                <li><a href="#">04. 이벤트 속성 : offsetY : 요소를 기준</a></li>
+                <li><a href="#">05. 이벤트 속성 : pageX : 페이지 기준</a></li>
+                <li><a href="#">06. 이벤트 속성 : pageY : 페이지 기준</a></li>
+                <li><a href="#">07. 이벤트 속성 : screenX : 디바이스 기준</a></li>
+                <li><a href="#">08. 이벤트 속성 : screenY : 디바이스 기준</a></li>
+            </ul>
+
+            <h2>마우스 드래그</h2>
+            <ul>
+                <li><a href="#">01. 이벤트 메서드 : addEventListerner("drag") : 드래그 중인 경우</a></li>
+                <li><a href="#">02. 이벤트 메서드 : addEventListerner("dragstart") : 드래그를 시작한 경우</a></li>
+                <li><a href="#">03. 이벤트 메서드 : addEventListerner("dragend") : 드래그가 끝난 경우</a></li>
+                <li><a href="#">04. 이벤트 메서드 : addEventListerner("dragenter") : 요소 위치에 드래그 했을 경우</a></li>
+                <li><a href="#">05. 이벤트 메서드 : addEventListerner("dragover") : 요소의 위치 위에 있을 경우</a></li>
+                <li><a href="#">06. 이벤트 메서드 : addEventListerner("dragleave") : 요소의 위치 위에서 벗어 났을 경우</a></li>
+                <li><a href="#">07. 이벤트 메서드 : addEventListerner("drop") : 요소의 위치에 드롭 했을 경우</a></li>
+
+            </ul>
 
         </div>
         <!--//main__menu  -->
