--- a/effect/mouse.html
+++ b/effect/mouse.html
@@ -37,7 +37,7 @@
         .main__inner p strong {
             font-style: normal;
             font-weight: 900;
-
+            font-size: 45px;
         }
 
         .main__info {
