--- a/effect/mouse.html
+++ b/effect/mouse.html
@@ -1,270 +1,17 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mouse Effect</title>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-        rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <style>
-        body {
-            cursor: none;
-        }
-
-        .main__inner {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .main__inner p {
-            color: #d2d2d2;
-            padding: 10vw;
-            font-size: 2.4vmax;
-            text-align: center;
-            font-family: "Montserrat", sans-serif;
-            font-weight: 300;
-        }
-
-        .main__inner p em,
-        .main__inner p span,
-        .main__inner p i,
-        .main__inner p strong {
-            font-style: normal;
-            font-weight: 700;
-        }
-
-        .main__info {
-            position: absolute;
-            left: 16px;
-            top: 83px;
-            font-size: 14px;
-            width: 100%;
-        }
-
-        .main__info ul {
-            display: flex;
-            flex-wrap: wrap;
-        }
-
-        .main__info ul li {
-            width: 25%;
-            text-transform: uppercase;
-            font-family: 'Montserrat';
-            color: #dbdbdb;
-            font-weight: 200;
-        }
-
-        .cursor {
-            width: 100px;
-            height: 100px;
-            background-color: #ffffff2a;
-            border: 1px solid #ffffff1f;
-            backdrop-filter: blur(5px);
-            position: absolute;
-            left: 10px;
-            top: 10px;
-            border-radius: 50%;
-            z-index: 100000;
-            user-select: none;
-            pointer-events: none;
-            transition:
-                transform 0.5s,
-                background-color 0.3s,
-                border 0.3s,
-                border-radius 0.3s;
-        }
-
-        .cursor::before {
-            content: '';
-            width: 20px;
-            height: 1px;
-            background-color: #fff;
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-        }
-
-        .cursor::after {
-            content: '';
-            width: 1px;
-            height: 20px;
-            background-color: #fff;
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-        }
-
-        .cursor.span1 {
-            background-color: #b6323243;
-            border: 1px solid #b6323243;
-            transform: scale(0.5);
-            transition: opacity 0.3s ease;
-        }
-
-        .cursor.span1::after {
-            background-color: #32b66243;
-        }
-
-        .cursor.span1::before {
-            background-color: rgba(87, 248, 62, 0.263);
-
-        }
-
-        .cursor.span2 {
-            background-color: #ee671843;
-            border: 1px solid #ee671843;
-            transform: scale(0.5);
-        }
-
-        .cursor.span2:hover {
-            font-size: 2.6vmax;
-            transition: font-size 0.3s ease;
-        }
-
-        .cursor.span2::after {
-            background-color: #a9525243;
-        }
-
-        .cursor.span2::before {
-            background-color: #f74c4c43;
-        }
-
-        .cursor.span3 {
-            background-color: rgba(163, 18, 163, 0.347);
-            border: 1px solid #fd575720;
-            border-radius: 50%;
-            transform: rotate(720deg) scale(3);
-        }
-
-        .cursor.span3::after {
-            background-color: #f74c4c43;
-
-        }
-
-        .cursor.span3::before {
-            background-color: #f74c4c43;
-
-        }
-
-        .cursor.span4 {
-            background-color: #e04b4b43;
-            border: 1px solid #fd575720;
-            transform: rotate(360deg) scale(1);
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-        }
-
-        .cursor.span4::after {
-            background-color: #f74c4c43;
-
-        }
-
-        .cursor.span4::before {
-            background-color: #f74c4c43;
-        }
-    </style>
+    <title>Document</title>
 </head>
 
 <body>
-    <div id="wrap">
-        <header id="header">
-            <div class="header__inner">
-                <h1>Mouse Effect<em>01</em></h1>
-            </div>
-        </header>
-        <!-- //header -->
-        <main id="main">
-            <div class="cursor"></div>
-            <div class="main__inner">
-                <p> JavaScript is a versatile <span>programming</span> language that powers the dynamic behavior on most
-                    websites. It
-                    was originally developed by Netscape as a means to add interactive elements to browsers, and has
-                    since become a <span>fundamental</span>component of web development. <span>JavaScript</span> enables
-                    developers to implement
-                    complex features, from displaying timely content updates to <span>interactive</span> maps and
-                    animated 2D/3D
-                    graphics.</p>
-            </div>
-            <div class="main__info">
-                <ul>
-                    <li>clientX <span class="clientX">0</span></li>
-                    <li>offsetX <span class="offsetX">0</span></li>
-                    <li>pageX <span class="pageX">0</span></li>
-                    <li>screenX <span class="screenX">0</span></li>
-                </ul>
-            </div>
-        </main>
-        <!-- //main -->
-        <footer id="footer">
-            <div class="footer__inner">
-                <nav>
-                    <ul>
-                        <li><a href="#">01</a></li>
-                        <li><a href="#">02</a></li>
-                        <li><a href="#">03</a></li>
-                        <li><a href="#">04</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </footer>
-        <!-- //footer -->
-    </div>
-    <!-- //wrap -->
 
-    <script>
-        // info
-        window.addEventListener("mousemove", function (event) {
-            console.log(event);
-            document.querySelector(".clientX").innerText = event.clientX;
-            document.querySelector(".offsetX").innerText = event.offsetX;
-            document.querySelector(".pageX").innerText = event.pageX;
-            document.querySelector(".screenX").innerText = event.screenX;
-        });
-
-        // mouse
-        const cursor = document.querySelector(".cursor");
-
-        window.addEventListener("mousemove", function (e) {
-            cursor.style.left = e.clientX - 50 + "px";
-            cursor.style.top = e.clientY - 50 + "px";
-        });
-
-        document.querySelector(".main__inner p span:nth-child(1)").addEventListener("mouseover", function () {
-            cursor.classList.add("span1");
-        });
-
-
-        document.querySelector(".main__inner p span:nth-child(1)").addEventListener("mouseout", function () {
-            cursor.classList.remove("span1");
-        });
-        document.querySelector(".main__inner p span:nth-child(2)").addEventListener("mouseover", function () {
-            cursor.classList.add("span2");
-        });
-        document.querySelector(".main__inner p span:nth-child(2)").addEventListener("mouseout", function () {
-            cursor.classList.remove("span2");
-        });
-        document.querySelector(".main__inner p span:nth-child(3)").addEventListener("mouseover", function () {
-            cursor.classList.add("span3");
-        });
-        document.querySelector(".main__inner p span:nth-child(3)").addEventListener("mouseout", function () {
-            cursor.classList.remove("span3");
-        });
-        document.querySelector(".main__inner p span:nth-child(4)").addEventListener("mouseover", function () {
-            cursor.classList.add("span4");
-        });
-        document.querySelector(".main__inner p span:nth-child(4)").addEventListener("mouseout", function () {
-            cursor.classList.remove("span4");
-        });
-
-
-    </script>
 </body>
+<script>
+
+</script>
 
 </html>
