--- a/javascript/javascript03.html
+++ b/javascript/javascript03.html
@@ -926,7 +926,23 @@
     <script>hljs.highlightAll();</script>
     <script>
 
+        //
+        for(let i=0; i<=10; i++){
+            console.log(i);
+        }
 
+        const num = [100,200,300,400,500];
+        
+        for(num i=0; i<=num.length; i++){
+            console.log(num[i]);
+        };
+
+        const arr = [100, 200, 300, 400, 500, 600, 700, 800, 900];      
+
+    for (let i = 0; i < arr.length; i++) {
+
+    console.log(arr[i] + "번");
+    }
 
 
 
