--- a/javascript/test.html
+++ b/javascript/test.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -8,84 +8,12 @@
 </head>
 
 <body>
-
-</body>
-<script>
     <script>
-        // 1~10 까지 출력 for()
+        for (let i = 0; i <= 10; i++) {
+            console.log(i);
+        }
 
-        // 5단 출력
-
-        // 함수
-        // function func() {
-            //     let i = 5, j = 4, k = 1, l, m;
-            //     l = i > 10;
-            //     m = j <= 4 || k < 1;
-
-            //     console.log(l);
-            //     console.log(m);
-            // }
-            // func();
-
-            //
-            // const arr = [100, 200, 300];
-
-            // arr.push(600);
-
-            // console.log(arr);
-
-            //
-            // let num = 0;
-
-            // while (true) {
-            //     num++;
-
-            //     if (num == 5) {
-            //         break;
-            //     }
-            //     console.log(num);
-            // }
-            // 연산자
-            // 논리연산자(true, false), 산술연산자(+, - , *, /, %), 대입연산자(=, ==, ===, <=, ),
-            // 비트연산자ㄴㅇㄹ
-
-            // 최고 점수 구하기 / 최저 점수 구하기 / 평균 구하기 
-            // let data = [70, 80, 90, 20, 30, 40];
-            // let best = 0;
-            // let score = 0;
-
-            // for (let i = 0; i < data.length; i++) {
-            //     console.log(data[i]);
-
-            //     if (data[i] > 80) {
-            //         best++;
-            //     }
-
-            //     if (score < data[i]) {
-            //         score = data[i]
-            //     }
-            // }
-            // 매개변수
-            // function func(num1, num2, num3) {
-            //     if (num1 < num3) return num1
-            //     else return num2
-            // }
-            // func(10, 200, 30) + func(300, 400, 400)
-
-            function func() {
-                let i = 100, j = 200, k = 300;
-                i /= j;
-                j -= i;
-
-                // i = i / j;
-
-                console.log(i)
-            }
-
-        func();
-
-
-</script>
-</script>
+    </script>
+</body>
 
 </html>
