--- a/webd/3.basic/layoutC-3.html
+++ b/webd/3.basic/layoutC-3.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>웹디자인기능사 레이아웃 C-3</title>
+    <title>C-3</title>
     <style>
         * {
-            margin: 0;
             padding: 0;
+            margin: 0;
         }
 
         #wrap {
@@ -18,28 +18,20 @@
 
         #aside {
             width: 20%;
-        }
-
-        #h1 {
-            width: 100%;
-            height: 100px;
+            height: 650px;
             background-color: #e1e1e1;
-        }
-
-        #nav {
-            width: 100%;
-            height: 550px;
-            background-color: #dbdbdb;
         }
 
         #main {
             width: 80%;
+            height: 550px;
+            background-color: #d9d9d9;
         }
 
         #slider {
             width: 100%;
-            height: 350px;
-            background-color: #c7c7c7;
+            height: 300px;
+            background-color: #d9d9d9;
         }
 
         #contents {
@@ -49,47 +41,38 @@
 
         #contents .content1 {
             width: 33.3333%;
-            height: 200px;
-            background-color: #c9c9c9;
+            height: 250px;
+            background-color: #ddd7d7;
         }
 
         #contents .content2 {
             width: 33.3333%;
-            height: 200px;
-            background-color: #cdcdcd;
+            height: 250px;
+            background-color: #eddede;
         }
 
         #contents .content3 {
             width: 33.3333%;
-            height: 200px;
-            background-color: #cbcbcb;
+            height: 250px;
+            background-color: #cbc4c4;
         }
 
         #footer {
             width: 100%;
-            display: flex;
+            height: 100px;
+            background-color: #a3a3a3;
         }
 
         #footer .footer1 {
             width: 20%;
             height: 100px;
-            background-color: #b9b9b9;
+            background-color: #a3a3a3;
         }
 
         #footer .footer2 {
-            width: 80%;
-        }
-
-        #footer .footer2 .footer2-1 {
             width: 100%;
-            height: 50px;
-            background-color: #b1b1b1;
-        }
-
-        #footer .footer2 .footer2-2 {
-            width: 100%;
-            height: 50px;
-            background-color: #a3a3a3;
+            height: 100px;
+            background-color: #797979;
         }
     </style>
 </head>
@@ -97,23 +80,16 @@
 <body>
     <div id="wrap">
         <aside id="aside">
-            <h1 id="h1"></h1>
-            <nav id="nav"></nav>
+            <div class="logo"></div>
+            <div class="nav"></div>
         </aside>
-        <!-- //aside -->
-
         <main id="main">
-            <article id="slider">
-            </article>
-            <!-- //slider -->
-
+            <article id="slider"></article>
             <section id="contents">
-                <section class="content1"></section>
-                <section class="content2"></section>
-                <section class="content3"></section>
+                <div class="content1"></div>
+                <div class="content2"></div>
+                <div class="content3"></div>
             </section>
-            <!-- //contents -->
-
             <footer id="footer">
                 <div class="footer1"></div>
                 <div class="footer2">
@@ -121,11 +97,8 @@
                     <div class="footer2-2"></div>
                 </div>
             </footer>
-            <!-- //footer -->
         </main>
-        <!-- //main -->
     </div>
-    <!-- //wrap -->
 </body>
 
 </html>
