--- a/webd/3.basic/layoutB-1.html
+++ b/webd/3.basic/layoutB-1.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>웹디자인기능사 레이아웃 B-1</title>
     <style>
@@ -11,80 +10,51 @@
             margin: 0;
             padding: 0;
         }
+
         #wrap {
             width: 100%;
         }
+
         #header {
             width: 100%;
-            background-color: #efefef;
         }
+
         #header .header_container {
             width: 1200px;
-            margin: 0 auto;
+            height: 100px;
             display: flex;
+            margin: 0 auto;
+            background-color: #000;
         }
+
         #header .header_container .logo {
             width: 20%;
             height: 100px;
-            background-color: #d9d9d9;
+            background-color: #ddd;
         }
+
         #header .header_container .nav {
             width: 80%;
             height: 100px;
-            background-color: #d1d1d1;
+            background-color: #d9d9d9;
         }
+
         #slider {
-            width: 1200px;
+            width: 100%;
             height: 300px;
-            margin: 0 auto;
-            background-color: #c7c7c7;
+            background-color: #ccc;
         }
+
         #contents {
-            width: 1200px;
-            margin: 0 auto;
-            display: flex;
-        }
-        #contents .content1 {
-            width: 33.3333%;
+            width: 100%;
             height: 200px;
-            background-color: #bcbcbc;
+            background-color: #bbb;
         }
-        #contents .content2 {
-            width: 33.3333%;
-            height: 200px;
-            background-color: #b1b1b1;
-        }
-        #contents .content3 {
-            width: 33.3333%;
-            height: 200px;
-            background-color: #a3a3a3;
-        }
+
         #footer {
-            width: 100%;            
-            background-color: #d1d1d1;
-        }
-        #footer .footer_container {
-            width: 1200px;
-            margin: 0 auto;
-            display: flex;
-        }
-        #footer .footer_container .footer1 {
-            width: 20%;
+            width: 100%;
             height: 100px;
-            background-color: #9d9d9d;
-        }
-        #footer .footer_container .footer2 {
-            width: 80%;
-        }
-        #footer .footer_container .footer2 .footer2-1 {
-            width: 100%;
-            height: 50px;
-            background-color: #838080;
-        }
-        #footer .footer_container .footer2 .footer2-2 {
-            width: 100%;
-            height: 50px;
-            background-color: #838383;
+            background-color: #ddd;
         }
     </style>
 </head>
@@ -94,32 +64,12 @@
         <header id="header">
             <div class="header_container">
                 <h1 class="logo"></h1>
-                <nav class="nav"></nav>
+                <nav class="nav"></nav>>
             </div>
         </header>
-        <!-- //header -->
-
-        <article id="slider">
-        </article>
-        <!-- //slider -->
-
-        <main id="contents">
-            <section class="content1"></section>
-            <section class="content2"></section>
-            <section class="content3"></section>
-        </main>
-        <!-- //contents -->
-
-        <footer id="footer">
-            <div class="footer_container">
-                <div class="footer1"></div>
-                <div class="footer2">
-                    <div class="footer2-1"></div>
-                    <div class="footer2-2"></div>
-                </div>
-            </div>
-        </footer>
-        <!-- //footer -->
+        <article id="slider"></article>
+        <main id="contents"></main>
+        <footer id="footer"></footer>
     </div>
 </body>
 
