--- a/webd/1menu/jieun/test.html
+++ b/webd/1menu/jieun/test.html
@@ -1,80 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
+    body {
+      font-size: 2em;
     }
 
-    #slider {
-      width: 1200px;
-      height: 300px;
-      margin: 0 auto;
-      background-color: #ccc;
-      overflow: hidden;
-    }
-
-    .slider-wrap {
-      display: flex;
-      width: 6000px;
-    }
-
-    .slider-wrap .slider {
-      width: 1200px;
-      height: 300px;
-      text-align: center;
-      line-height: 300px;
-      font-size: 24px;
+    div {
+      display: block;
+      width: 300px;
+      height: 200px;
       background-color: red;
     }
 
-    .slider-wrap .slider.s2 {
-      background-color: aquamarine;
-    }
-
-    .slider-wrap .slider.s3 {
-      background-color: blueviolet
-    }
-
-    .slider-wrap .slider.s4 {
-      background-color: bisque
+    span {
+      display: inline-block;
+      width: 300px;
+      height: 200px;
+      background-color: blue;
     }
   </style>
 </head>
 
 <body>
-  <div id="slider">
-    <div class="slider-wrap">
-      <div class="slider s1">slider1</div>
-      <div class="slider s2">slider2</div>
-      <div class="slider s3">slider3</div>
-      <div class="slider s4">slider4</div>
-    </div>
+  <div>
+    <section class="item item-a">
+      <p>You've got a friend in me
+        You've got a friend in me
+        When the road looks rough ahead
+        And you're miles and miles from your nice warm bed
+        You just remember what your old pal said
+        Boy, you've got a friend in me</p>
+    </section>
   </div>
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script>
-    let currentIndex = 0;
-    $(".slider-wrap").append($(".slider").first().clone(true));
-
-    setInterval(() => {
-      currentIndex++;
-      $(".slider-wrap").animate({ marginLeft: -1200 * currentIndex + "px" }, 400)
-
-      if (currentIndex == 4) {
-        setTimeout(() => {
-          $(".slider-wrap").animate({ marginLeft: 0 }, 0);
-          currentIndex = 0;
-        }, 1000)
-      }
-    }, 2000);
-  </script>
+  <span>span</span>
 </body>
 
 </html>
