--- a/webd/3.basic/layoutB-1.html
+++ b/webd/3.basic/layoutB-1.html
@@ -17,14 +17,13 @@
 
         #header {
             width: 100%;
+            background-color: #efefef;
         }
 
         #header .header_container {
             width: 1200px;
-            height: 100px;
             display: flex;
             margin: 0 auto;
-            background-color: #000;
         }
 
         #header .header_container .logo {
@@ -40,21 +39,67 @@
         }
 
         #slider {
-            width: 100%;
+            width: 1200px;
             height: 300px;
+            margin: 0 auto;
             background-color: #ccc;
         }
 
         #contents {
-            width: 100%;
+            width: 1200px;
+            margin: 0 auto;
+            display: flex;
+        }
+
+        #contents .content1 {
+            width: 33.3333%;
             height: 200px;
             background-color: #bbb;
         }
 
+        #contents .content2 {
+            width: 33.3333%;
+            height: 200px;
+            background-color: #b3b3b3;
+        }
+
+        #contents .content3 {
+            width: 33.3333%;
+            height: 200px;
+            background-color: #b9b9b9;
+        }
+
         #footer {
             width: 100%;
+            background-color: #efefef;
+        }
+
+        #footer .footer__container {
+            width: 1200px;
+            margin: 0 auto;
+            display: flex;
+        }
+
+        #footer .footer__container .footer1 {
+            width: 20%;
             height: 100px;
-            background-color: #ddd;
+            background-color: #b7b7b7;
+        }
+
+        #footer .footer__container .footer2 {
+            width: 80%;
+        }
+
+        #footer .footer__container .footer2 .footer2-1 {
+            width: 100%;
+            height: 50px;
+            background-color: #b9b9b9;
+        }
+
+        #footer .footer__container .footer2 .footer2-2 {
+            width: 100%;
+            height: 50px;
+            background-color: #b3b3b3;
         }
     </style>
 </head>
@@ -64,12 +109,24 @@
         <header id="header">
             <div class="header_container">
                 <h1 class="logo"></h1>
-                <nav class="nav"></nav>>
+                <nav class="nav"></nav>
             </div>
         </header>
         <article id="slider"></article>
-        <main id="contents"></main>
-        <footer id="footer"></footer>
+        <main id="contents">
+            <div class="content1"></div>
+            <div class="content2"></div>
+            <div class="content3"></div>
+        </main>
+        <footer id="footer">
+            <div class="footer__container">
+                <div class="footer1"></div>
+                <div class="footer2">
+                    <div class="footer2-1"></div>
+                    <div class="footer2-2"></div>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 
